# naming_lib

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: detector.rs  lib.rs  naming_case.rs
tests/: detector.rs  naming_case.rs
tests/common/: mod.rs
