[package]
name = "naming_lib"
version = "0.1.3"
authors = ["Boholder <bottleholder@anche.no>"]
description = """
Library for identifying and converting identifiers naming format (case | notation).
"""
documentation = "https://docs.rs/naming_lib"
homepage = "https://github.com/boholder/naming_lib"
repository = "https://github.com/boholder/naming_lib"
keywords = ["source", "code", "naming", "format"]
categories = ["text-processing"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "~1.5.4"
lazy_static = "~1.4.0"

[dev-dependencies]
quickcheck = "~1.0.3"
quickcheck_macros = "1"
rand = "~0.8.4"